trying to fix obl cases "hidden" behind the buttons

--- a/Styles.css
+++ b/Styles.css
@@ -10,7 +10,6 @@ body {
   user-select: none;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-  -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
@@ -25,7 +24,6 @@ body {
   background-color: #1f1f1f;
   color: #ffffff;
   padding: 0.5rem;
-  text-align: top;
   font-size: 1.2rem;
   border-bottom: 2px solid #333;
   display: flex;
@@ -87,7 +85,7 @@ input[type="checkbox"] {
 .obl-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    align-content:top;
+    align-content:start;
     gap: 0.5rem;
     flex: 1;
     min-height: 0;
